--- a/package.json
+++ b/package.json
@@ -24,8 +24,14 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-passport": "0.0.5",
     "mongoose": "^5.10.2",
-    "nodemon": "^2.0.4"
+    "nodemailer": "^6.4.11",
+    "nodemon": "^2.0.4",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
     "concurrently": "^5.3.0"
