--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/clockwerkz/magiclink#readme",
   "dependencies": {
+    "@sendgrid/mail": "^7.2.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
