--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jsonwebtoken": "^8.5.1",
     "jwt-passport": "0.0.5",
     "mongoose": "^5.10.2",
+    "node-ses": "^3.0.2",
     "nodemailer": "^6.4.11",
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
