--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/clockwerkz/magiclink#readme",
   "dependencies": {
     "@sendgrid/mail": "^7.2.4",
+    "aws-sdk": "^2.748.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
